<resources>
    <string name="app_name">To_Be_Decided</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Menu</string>
    <string name="my_house_label">Minha Casa</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_medication_label">Meus Medicamentos</string>
    <string name="my_medication_list_label">Meus Medicamentos</string>
    <string name="login">LOGIN with Google</string>
    <string name="title">tobeDecided</string>
    <string name="menu1">Minha Casa</string>
    <string name="menu2">Meus Medicamentos</string>
    <string name="menu3">Definições</string>
    <string name="menu4">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">pills</string>
    <string name="channel_description">Notificações de toma de Comprimidos</string>

</resources>
